--- a/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2FhomepageRS.html
+++ b/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2FhomepageRS.html
@@ -104,6 +104,7 @@
             margin-bottom: 20px;
             letter-spacing: 6px;
             text-transform: uppercase;
+            color: var(--color-dark-beige);
         }
 
         .hero-subtitle {
@@ -453,26 +454,6 @@
             }
         }
     </style>
-    <!-- Header -->
-    <header class="header">
-        <div class="header-container">
-            <a href="#" class="logo">
-                <img src="../images/portraitbn.png" 
-                     alt="Valerio Evangelisti" 
-                     style="height: 80px; width: auto; margin-top: -10px; margin-bottom: -20px; margin-left:-40px;">
-            </a>
-            <nav>
-                <ul class="nav-menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#project">The Project</a></li>
-                    <li><a href="#methodology">Methodology</a></li>
-                    <li><a href="#data">Data</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
