--- a/config/page-layout/header.hbs
+++ b/config/page-layout/header.hbs
@@ -27,10 +27,10 @@
     <div class="collapse navbar-collapse" id="rs-navbar">
 
       <ul class="nav navbar-nav navbar-left" style="height: 70px; display: flex; align-items: center;">
-        <li><a href="#home">Home</a></li>
+        <li><a href="/resource/homepageRS">Home</a></li>
         <li><a href="#project">The Project</a></li>
         <li><a href="#methodology">Methodology</a></li>
-        <li><a href="#data">Data</a></li>
+        <li><a href="/resource/main_tree">Data</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
 
