--- a/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
+++ b/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
@@ -426,7 +426,7 @@
                                 <tr>
                                   <td>Current Medium</td>
                                   <td>
-                                    NAS
+                                    Server Dell PowerEdge R7525
                                     <mp-overlay-dialog title="Current Medium Derivation Info" type="modal" bs-size="small">
                                       <mp-overlay-dialog-trigger>
                                         <i class="fa fa-info-circle" style="color: #17a2b8; cursor: pointer; margin-left: 5px; font-size: 14px;"></i>
@@ -463,7 +463,7 @@
                                               <i class="fa fa-file-text-o" style="color: #9b59b6; margin-right: 10px; margin-top: 3px;"></i>
                                               <div>
                                                 <strong style="color: #555; display: block; margin-bottom: 2px;">Notes</strong>
-                                                <span style="color: #333;">Migrated to NAS to perform structure and metadata extraction</span>
+                                                <span style="color: #333;">Migrated to Server Dell PowerEdge R7525 to perform structure and metadata extraction</span>
                                               </div>
                                             </div>
                                           </div>
@@ -572,7 +572,7 @@
                                 <tr>
                                   <td>Current Medium</td>
                                   <td>
-                                    NAS
+                                    Server Dell PowerEdge R7525
                                     <mp-overlay-dialog title="Current Medium Derivation Info" type="modal" bs-size="small">
                                       <mp-overlay-dialog-trigger>
                                         <i class="fa fa-info-circle" style="color: #17a2b8; cursor: pointer; margin-left: 5px; font-size: 14px;"></i>
@@ -609,7 +609,7 @@
                                               <i class="fa fa-file-text-o" style="color: #9b59b6; margin-right: 10px; margin-top: 3px;"></i>
                                               <div>
                                                 <strong style="color: #555; display: block; margin-bottom: 2px;">Notes</strong>
-                                                <span style="color: #333;">Migrated to NAS to perform structure and metadata extraction</span>
+                                                <span style="color: #333;">Migrated to Server Dell PowerEdge R7525 to perform structure and metadata extraction</span>
                                               </div>
                                             </div>
                                           </div>
@@ -718,7 +718,7 @@
                                 <tr>
                                   <td>Current Medium</td>
                                   <td>
-                                    NAS
+                                    Server Dell PowerEdge R7525
                                     <mp-overlay-dialog title="Current Medium Derivation Info" type="modal" bs-size="small">
                                       <mp-overlay-dialog-trigger>
                                         <i class="fa fa-info-circle" style="color: #17a2b8; cursor: pointer; margin-left: 5px; font-size: 14px;"></i>
@@ -755,7 +755,7 @@
                                               <i class="fa fa-file-text-o" style="color: #9b59b6; margin-right: 10px; margin-top: 3px;"></i>
                                               <div>
                                                 <strong style="color: #555; display: block; margin-bottom: 2px;">Notes</strong>
-                                                <span style="color: #333;">Migrated to NAS to perform structure and metadata extraction</span>
+                                                <span style="color: #333;">Migrated to Server Dell PowerEdge R7525 to perform structure and metadata extraction</span>
                                               </div>
                                             </div>
                                           </div>
