--- a/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
+++ b/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
@@ -400,7 +400,7 @@
                         <div class="metadata-field">
                           <span class="metadata-label">Description:</span>
                           <span class="metadata-value">
-                            This collection of floppy disks (2,214 items, 4.85 GB) constitutes the earliest digital segment of Evangelisti's archive. It includes drafts of early novels, initial issues of Carmilla, BBS messages, personal notes, and software applications. As a floppy-based archive, it offers unique insight into his early digital practices, combining textual production, software use, and engagement with underground computing and gaming culture.
+                            This collection of floppy disks (2,214 items, 4.85 GB) constitutes the earliest digital segment of Evangelisti's archive. It includes drafts of early novels, initial issues of Carmilla, BBS messages, personal notes, and software applications. The collection offers unique insight into his early digital practices, combining textual production, software use, and engagement with underground computing and gaming culture.
                           </span>
                         </div>
                       {{/if}}
